--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
     />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cycling Routes</title>
+    <title>Gravly - Find your next gravel ride</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link
       rel="stylesheet"
