--- a/frontend/editor.html
+++ b/frontend/editor.html
@@ -25,7 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://unpkg.com https://cdnjs.cloudflare.com; img-src 'self' data: https: http://localhost:8000; font-src 'self' https://cdnjs.cloudflare.com; connect-src 'self' http://localhost:8000 https://api.strava.com; frame-src 'self' https://www.youtube.com https://player.vimeo.com; object-src 'none'; base-uri 'self';"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://unpkg.com https://cdnjs.cloudflare.com; img-src 'self' data: https: http://localhost:8000 https://gravly.cc:33443 http://gravly.cc:33000; font-src 'self' https://cdnjs.cloudflare.com; connect-src 'self' http://localhost:8000 https://gravly.cc:33443 http://gravly.cc:33000 https://api.strava.com; frame-src 'self' https://www.youtube.com https://player.vimeo.com; object-src 'none'; base-uri 'self';"
     />
     <title>Gravly - Find your next gravel ride</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
